cloudformation.yml
Parameters:
  SSHKey:
    Type: AWS::EC2::KeyPair::KeyName
  
Resources:
  OnPremInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1c
      ImageId: ami-033b95fb8079dc481
      InstanceType: t3a.medium
      Tags:
        - Key: "Name"
          Value: "wordpressonprem"
      KeyName: !Ref SSHKey
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: '12'
      SecurityGroups:
        - !Ref OnPremSG
      UserData: 
        Fn::Base64: |
           #! /bin/bash
           sudo yum update -y
           sudo amazon-linux-extras install docker -y
           sudo systemctl start docker
           sudo systemctl enable docker
           sudo usermod -a -G docker ec2-user
           sudo curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           sudo yum install git -y
           cd /home/ec2-user
           git clone https://github.com/Kamara1111/AWS-MGN.git
           cd AWS-MGN
           docker-compose up -d

  OnPremSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH, HTTP, HTTPS and TCP 1500
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      - CidrIp: 0.0.0.0/0
        FromPort: 1500
        IpProtocol: tcp
        ToPort: 1500
Outputs:
  MyInstanceDNS:
    Value: !GetAtt OnPremInstance.PublicDnsName
